--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.css
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.css
@@ -1,7 +1,6 @@
 .search_bar{
     position: absolute;
     bottom: 0;
-    left: 0;
 }
 
 .map {
@@ -9,6 +8,10 @@
     height: 400px;
     background-color: grey;
 }
+
+/* .dragged_item{
+    padding-bottom: 0%;
+} */
 
 table {
     border-collapse: collapse;
@@ -23,6 +26,10 @@ tr {
     font-size: 120%;
     font-weight: bold;
     color: #259ded;
+}
+
+.category{
+    font-style: italic;
 }
 
 .business-header {
