--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -1,43 +1,42 @@
 <body ng-app="tablePlunker" style="margin: 10px;">
 
-    <header class="business-header">
+    <div class="business-header">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="display-3 text-center text-white mt-4">Let's Adventure</h2>
+                    <h2 class="title display-3 text-center text-white mt-4">Let's Adventure</h2>
                     <h4 class="text-center text-white mt-4">Organize an itinerary based on your location and
                         preferences</h4>
                 </div>
             </div>
-            <div class="buisness-header">
-                <div class="col-lg-12 search-bar">
-                    <div class="input-group stylish-input-group">
-                        <input #wordToSearchFor type="text" class="form-control" placeholder="Enter a city, state...">
-                        <div class="row">
-                            <div class="col">
-                                <div ngbDropdown class="d-inline-block">
-                                    <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{
-                                        displayMessage }}</button>
-                                    <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                                        <div *ngFor="let option of sortOptions">
-                                            <button class="dropdown-item" id="option" on-click="onDropDownSelect(option)">{{option}}</button>
-                                        </div>
-                                    </div>
+        </div>
+        <div class="col-lg-12 search-bar align-bottom">
+            <div class="input-group stylish-input-group">
+                <input #wordToSearchFor type="text" class="form-control" placeholder="Enter a city, state...">
+                <div class="row">
+                    <div class="col">
+                        <div ngbDropdown class="d-inline-block">
+                            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{
+                                displayMessage }}</button>
+                            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                                <div *ngFor="let option of sortOptions">
+                                    <button class="dropdown-item" id="option" on-click="onDropDownSelect(option)">{{option}}</button>
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-outline-primary" (click)="onButtonClick(wordToSearchFor.value)">
-                            <span class="glyphicon glyphicon-search">Submit</span>
-                        </button>
                     </div>
                 </div>
+                <button class="btn btn-outline-primary" (click)="onButtonClick(wordToSearchFor.value)">
+                    <span class="glyphicon glyphicon-search">Submit</span>
+                </button>
             </div>
         </div>
-    </header>
+        <!-- </div> -->
+    </div>
     <div ng-controller="GridController">
         <ng-container *ngIf="show">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 pot-dest">
                     <br>
                     <h2>Potential Destinations</h2>
                     <div class="table-responsive" *ngIf='events'>
@@ -57,7 +56,8 @@
                         <pagination-controls (pageChange)="p = $event"></pagination-controls>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-5">
                     <div droppable (onDrop)="onItemDrop($event)">
                         <br>
                         <h2>Your Itinerary</h2>
@@ -65,8 +65,8 @@
                             <br>
                         </div>
                         <div class="panel-body">
-                            <div *ngFor="let tripEvent of all_tripEvents" class="list-group-item" draggable="true"
-                                [dragData]=tripEvent>
+                            <div class="dragged_item" *ngFor="let tripEvent of all_tripEvents" class="list-group-item"
+                                draggable="true" [dragData]=tripEvent>
                                 <span class="col-md-5 itin_num"> {{ tripEvent.order + 1 }}</span>
                                 <span class="col-md-11">
                                     <span class="itin-name"> {{ tripEvent.name }}</span>
