--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
                 <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="myItineraries">My Itineraries</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="build">Build an Itinerary</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="contactus">Contact Us</a></li>
             </ul>
         </div>
     </div>
