--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -30,58 +30,12 @@
     </ng-template>
   </ngb-carousel>
 
-<!-- <table class="table">
-  <thead class="h">
-    <tr class="h">
-      <th class="h">Title</th>
-      <th class="h">Description</th>
-      <th class="h">Date</th>
-      <th class="h">Status</th>
-      <th class="h">Options</th>
-    </tr>
-  </thead>
-  <tbody> -->
-    <!-- <tr class="itinerary" (dblclick)="editItinerary(itinerary)" *ngFor="let itinerary of itinerarysList">
 
-      <ng-container *ngIf="!editItinerarys.includes(itinerary); else editTD">
-        <td>{{itinerary.title}}</td>
-        <td>{{itinerary.description}}</td>
-        <td>{{itinerary.date | date}}</td>
-        <td>{{itinerary.status}}</td>
-      </ng-container>
-
-      <ng-template #editTD>
-        <td><input type="text" name="title" id="title" (keypress)="submitItinerary($event, itinerary)" [(ngModel)]="itinerary.title"
-            placeholder="Title" class="form-control"></td>
-        <td><input type="text" name="description" id="description" (keypress)="submitItinerary($event, itinerary)"
-            [(ngModel)]="itinerary.description" placeholder="Description" class="form-control"></td>
-        <td>{{itinerary.date | date}}</td>
-        <td>
-          <input type="text" name="status" id="status" (keypress)="submitItinerary($event, itinerary)" [(ngModel)]="itinerary.status"
-            placeholder="Status" class="form-control">
-        </td>
-      </ng-template>
-
-      <td class="o">
-        <button class="btn btn-success" (click)="doneItinerary(itinerary)">
-          <i class="fa fa-check"></i>
-        </button>
-        <button class="btn btn-primary" (click)="editItinerary(itinerary)">
-          <i class="fa fa-pencil"></i>
-        </button>
-        <button class="btn btn-danger" (click)="deleteItinerary(itinerary)">
-          <i class="fa fa-trash"></i>
-        </button>
-      </td>
-
-    </tr> -->
-  <!-- </tbody> -->
-<!-- </table> -->
 </section>
 
-<!-- Page Content
+<!-- Page Content -->
 <section class="py-5">
   <div>
     <router-outlet></router-outlet>
   </div>
-</section> -->
+</section>
