--- a/frontend/src/app/contactus/contactus.component.html
+++ b/frontend/src/app/contactus/contactus.component.html
@@ -1,18 +1,44 @@
-<div class="intro-content py-6 text-center">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-center">
-        <h1 class="my-3 display-4 d-none d-lg-inline-block">Meet the Team</h1>
-        <p class="lead mb-3">The developers behind Travel Express</p>
-      </div>
+<!-- <body> -->
+<!-- <div class="intro-content py-6 text-center">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-center">
+                    <h1 class="my-3 display-4 d-none d-lg-inline-block">Meet the Team</h1>
+                    <p class="lead mb-3">The developers behind Travel Express</p>
+                </div>
+            </div>
+        </div>
+    </div> -->
+<div class="business-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="title display-3 text-gray text-shadow mt-4">Meet the Team</h2>
+                <h4 class="text-right text-gray text-shadow mt-4">The developers behind Travel Express</h4>
+            </div>
+        </div>
     </div>
-  </div>
+
 </div>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h1 class="mt-5">The Big Picture</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente
+                    repellat esse, doloremque quod recusandae deleniti nostrum assumenda vel beatae sed aut modi
+                    nesciunt porro quisquam voluptatem.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- </body> -->
+
 
 <div class="row">
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-        <img class="img-responsive" src="../assets/images/monica.png" class="align-items-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect">
+            <img class="img-responsive" src="../assets/images/monica.png" class="align-items-center">
             <div class="overlay">
                 <h2>Monica Mooney</h2>
                 <p class="icon-links">
@@ -24,12 +50,12 @@
                     </a>
                 </p>
             </div>
+        </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-      <img class="img-responsive" src="../assets/images/brittany.png" class="align-items-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect">
+            <img class="img-responsive" src="../assets/images/brittany.png" class="align-items-center">
             <div class="overlay">
                 <h2>Brittany Pham</h2>
                 <p class="icon-links">
@@ -41,12 +67,12 @@
                     </a>
                 </p>
             </div>
+        </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-      <img class="img-responsive" src="../assets/images/logan.png" class="align-items-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect">
+            <img class="img-responsive" src="../assets/images/logan.png" class="align-items-center">
             <div class="overlay">
                 <h2>Logan Muir</h2>
                 <p class="icon-links">
@@ -58,12 +84,12 @@
                     </a>
                 </p>
             </div>
+        </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-      <img class="img-responsive" src="../assets/images/maaz.png" class="align-items-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect">
+            <img class="img-responsive" src="../assets/images/maaz.png" class="align-items-center">
             <div class="overlay">
                 <h2>Maaz Nasir</h2>
                 <p class="icon-links">
@@ -75,12 +101,12 @@
                     </a>
                 </p>
             </div>
+        </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-      <img class="img-responsive" src="../assets/images/rj.png" class="align-items-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect">
+            <img class="img-responsive" src="../assets/images/rj.png" class="align-items-center">
             <div class="overlay">
                 <h2>RJ Bowen</h2>
                 <p class="icon-links">
@@ -92,12 +118,12 @@
                     </a>
                 </p>
             </div>
+        </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    <div class="hovereffect">
-      <img class="img-responsive" src="../assets/images/eric.png" class="align-items-center">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="hovereffect">
+            <img class="img-responsive" src="../assets/images/eric.png" class="align-items-center">
             <div class="overlay">
                 <h2>Eric Kurtz</h2>
                 <p class="icon-links">
@@ -109,13 +135,13 @@
                     </a>
                 </p>
             </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <!-- Page Content -->
 <section class="py-5">
-  <div>
-    <router-outlet></router-outlet>
-  </div>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
 </section>
