--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,28 +4,28 @@
       <img [src]="images[0]" class= "center" class="w-100" alt="Random first slide">
       <div class="carousel-caption">
         <h3>Welcome back, USER</h3>
-        <p>This carousel uses customized default values.</p>
+        <p>Start planning your next trip.</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
       <img [src]="images[1]" class= "center" class="w-100" alt="Random second slide">
       <div class="carousel-caption">
         <h3>Welcome back, USER</h3>
-        <p>This carousel doesn't pause or resume on mouse events</p>
+        <p>Start planning your next trip.</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
       <img [src]="images[2]" class= "center" class="w-100" alt="Random third slide">
       <div class="carousel-caption">
         <h3>Welcome back, USER</h3>
-        <p>This carousel uses customized default values.</p>
+        <p>Start planning your next trip.</p>
       </div>
     </ng-template>
     <ng-template ngbSlide>
       <img [src]="images[3]" class= "center" class="w-100" alt="Random fourth slide">
       <div class="carousel-caption">
         <h3>Welcome back, USER</h3>
-        <p>This carousel uses customized default values.</p>
+        <p>Start planning your next trip.</p>
       </div>
     </ng-template>
   </ngb-carousel>
