--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <ng-template ngbSlide>
       <img [src]="images[0]" class= "center" class="w-100" alt="Random first slide">
       <div class="carousel-caption">
-        <h3>Welcome back, USER</h3>
+        <h3>Welcome back</h3>
         <p>This carousel uses customized default values.</p>
       </div>
     </ng-template>
