--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,7 +14,7 @@
                 <li class="nav-item"><a class="nav-link" routerLink="build">Build an Itinerary</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" *ngIf="!isAuthenticated()" (click)="login()">Login</a></li>
-                <li class="nav-item"><a class="nav-link" *ngIf="isAuthenticated()" (click)="logout()">Logout {{profile?.email}}</a></li>
+                <li class="nav-item"><a class="nav-link" *ngIf="isAuthenticated()" (click)="logout()">Logout {{profile?.nickname}}</a></li>
             </ul>
         </div>
     </div>
