this is being annoying but at least the login button is on the right

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,10 +11,13 @@
                 <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="myItineraries">My Itineraries</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="build">Build an Itinerary</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="build">Build Itinerary</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <a class="navbar-brand" navbar-light>{{profile?.nickname}}</a>
                 <li class="nav-item"><a class="nav-link" *ngIf="!isAuthenticated()" (click)="login()">Login</a></li>
-                <li class="nav-item"><a class="nav-link" *ngIf="isAuthenticated()" (click)="logout()">Logout {{profile?.nickname}}</a></li>
+                <li class="nav-item"><a class="nav-link" *ngIf="isAuthenticated()" (click)="logout()">Logout</a></li>
             </ul>
         </div>
     </div>
