--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-12 search-bar align-bottom">
             <div class="input-group stylish-input-group">
-                <input #wordToSearchFor type="text" class="form-control" placeholder="Enter a city, state...">
+                <input #wordToSearchFor (keydown)="onEnter($event)" type="text" class="form-control" placeholder="Enter a city, state...">
                 <div class="row">
                     <div class="col">
                         <div ngbDropdown class="d-inline-block">
