Itinerary frontend and fixed heading on contact us page

--- a/frontend/src/app/contactus/contactus.component.html
+++ b/frontend/src/app/contactus/contactus.component.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="title display-3 text-gray text-shadow mt-4">Meet the Team</h2>
-                <h4 class="text-gray text-shadow mt-4">The developers behind Travel Express</h4>
+                <h2 class="title display-3 text-center text-gray text-shadow mt-4">Meet the Team</h2>
+                <h4 class="text-gray text-center text-shadow mt-4">The developers behind Travel Express</h4>
             </div>
         </div>
     </div>
